--- a/VIEW/html/Admin/Admin_Navigation.html
+++ b/VIEW/html/Admin/Admin_Navigation.html
@@ -4,8 +4,8 @@
     <p class="navbar-text white">We serve any thing with a single call.</p>
     <ul class="nav navbar-nav navbar-right">
 
-        <li class="nav active"><a href="../../../CONTROLLER/Logout_Handler.php">Logout</a></li>
-        <li class="nav active"><a href="#">About</a></li>
+        <li class="nav"><span class="glyphicon glyphicon-log-out"></span></li>
+        <li class="nav"><a href="../../../CONTROLLER/Logout_Handler.php">Logout</a></li>
 
     </ul>
 
