--- a/VIEW/html/Operator/Operator_Navigation.html
+++ b/VIEW/html/Operator/Operator_Navigation.html
@@ -1,10 +1,10 @@
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <a class="navbar-brand white">Afalagi Operator</a>
+    <a class="navbar-brand">Afalagi Operator </a>
     <p class="navbar-text white">We serve any thing with a single call.</p>
-    <ul class="nav navbar-nav navbar-right">
 
-        <li class="nav active"><a href="../../../CONTROLLER/Logout_Handler.php">Logout</a></li>
-        <li class="nav active"><a href="#">About</a></li>
+    <ul class="nav navbar-nav navbar-right">
+        <li class="nav"><span class="glyphicon glyphicon-log-out"></span></li>
+        <li class="nav"><a href="../../../CONTROLLER/Logout_Handler.php">Logout</a></li>
 
     </ul>
 
