--- a/VIEW/html/Encoder/Add_Place/Place_Add_Menu.html
+++ b/VIEW/html/Encoder/Add_Place/Place_Add_Menu.html
@@ -17,9 +17,9 @@
             <span class="s_17px">Add SubCity</span>
 
         </a>
-        <a href="Add_Place_Kebele_OR_Wereda_inc.php" class="list-group-item encoder_menu">
+        <a href="Add_Place_Wereda_inc.php" class="list-group-item encoder_menu">
 
-            <span class="s_17px">Add Kebele</span>
+            <span class="s_17px">Add Wereda</span>
 
         </a>
         <a href="Add_Place_Sefer_inc.php" class="list-group-item encoder_menu">
